--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,16 +13,17 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Movie Database</title>
 </head>
+
 <body>
     <h1>Movie Database</h1>
     <main>
         <section id="searchSection">
             <input type="text" id="searchQuery" placeholder="Search here">
-            <select name="movies" id="selectMovies">
+            <!-- <select name="movies" id="selectMovies">
                 <option value="secMovieId">Movie title</option>
                 <option value="secMovieYearId">Move title, release year</option>
                 <option value="secPersonId">Person involved</option>
-            </select>
+            </select> -->
             <button onclick="searchBtnClick()" id="searchBtn">Search</button>
         </section>
         <section id="resultMovieSection">
@@ -60,12 +61,12 @@
                         <p><strong>Birthplace</strong></p>
                         <li id="personBirthplace"></li>
                         <p><strong>Day of Decease</strong></p>
-                        <li id="personDeathDay">Still alive</li>    
+                        <li id="personDeathDay">Still alive</li>
                         <p><strong>Biography</strong></p>
-                        <li id="personBiography"></li>                
+                        <li id="personBiography"></li>
                         <p><strong>Website</strong></p>
                         <li id="personWebsite">No website</li>
-                        <li id="personMovies"> 
+                        <li id="personMovies">
                             <table>
                                 <thead>
                                     <tr>
@@ -95,37 +96,16 @@
                         <p><strong>Runtime</strong></p>
                         <li id="movieRuntime"></li>
                         <p><strong>Overview</strong></p>
-                        <li id="movieOverview"></li>    
-                        <p><strong>Website</strong></p>
-                        <li id="movieWebsite">No website</li>
-                        <p><strong>Genres</strong></p>
-                        <li id="movieGenres"></li>
+                        <li id="movieOverview"></li>
                         <p><strong>Directors</strong></p>
                         <li id="movieDirectors"></li>
-                        <p><strong>Script Writers</strong></p>
-                        <li id="movieWriters"></li>
-                        <p><strong>Executive Producers</strong></p>
-                        <li id="movieExecProd"></li>
-                        <p><strong>Producers</strong></p>
-                        <li id="movieProducers"></li>
-                        <p><strong>Music Composers</strong></p>
-                        <li id="movieMusicComposers"></li>
-                        <p><h2>Actors</h2></p>
-                        <li id="movieActors"> 
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Character</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
-                        </li>
+                        <p><strong>Cast</strong></p>
+                        <li id="cast"></li>
                     </ul>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
