--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
     <main>
         <section id="searchSection">
             <input type="text" id="searchQuery" placeholder="Search here">
-            <!-- <select name="movies" id="selectMovies">
-                <option value="secMovieId">Movie title</option>
-                <option value="secMovieYearId">Move title, release year</option>
-                <option value="secPersonId">Person involved</option>
-            </select> -->
             <button onclick="searchBtnClick()" id="searchBtn">Search</button>
         </section>
         <section id="resultMovieSection">
@@ -36,72 +31,26 @@
                 <tbody></tbody>
             </table>
         </section>
-        <section id="resultPersonSection">
-            <table id="personTable">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Main Activity</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-        <section>
-            <div id="personInfoSection" class="modal">
-                <div class="modal-content">
-                    <span class="close" onclick="ShowFrontPagePerson()">&times;</span>
-                    <ul>
-                        <p><strong>Name</strong></p>
-                        <li id="personName"></li>
-                        <p><strong>Main Activity</strong></p>
-                        <li id="personMainActivity"></li>
-                        <p><strong>Birthday</strong></p>
-                        <li id="personBirthday"></li>
-                        <p><strong>Birthplace</strong></p>
-                        <li id="personBirthplace"></li>
-                        <p><strong>Day of Decease</strong></p>
-                        <li id="personDeathDay">Still alive</li>
-                        <p><strong>Biography</strong></p>
-                        <li id="personBiography"></li>
-                        <p><strong>Website</strong></p>
-                        <li id="personWebsite">No website</li>
-                        <li id="personMovies">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Title</th>
-                                        <th>Release Year</th>
-                                        <th>Role</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
         <section>
             <div id="movieInfoSection" class="modal">
                 <div class="modal-content">
                     <span class="close" onclick="ShowFrontPageMovie()">&times;</span>
                     <ul>
+                        <li><p id="movieId"></p></li>
                         <p><strong>Title</strong></p>
-                        <li id="movieTitle"></li>
+                        <li><input type="text" id="movieTitle"></li>
                         <p><strong>Release Date</strong></p>
-                        <li id="movieReleaseDate"></li>
-                        <p><strong>Language</strong></p>
-                        <li id="movieLanguage"></li>
+                        <li><input type="text" id="movieReleaseDate"></li>
                         <p><strong>Runtime</strong></p>
-                        <li id="movieRuntime"></li>
+                        <li><input type="text" id="movieRuntime"></li>
                         <p><strong>Overview</strong></p>
-                        <li id="movieOverview"></li>
+                        <li><input type="text" id="movieOverview"></li>
                         <p><strong>Directors</strong></p>
-                        <li id="movieDirectors"></li>
+                        <li><input type="text" id="movieDirectors"></li>
                         <p><strong>Cast</strong></p>
-                        <li id="cast"></li>
+                        <li><input type="text" id="cast"></li>
                     </ul>
+                    <button id="saveBtn" oncanplay="SaveMovieInfo()">Save</button>
                 </div>
             </div>
         </section>
