add movie added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
     <main>
         <section id="searchSection">
             <input type="text" id="searchQuery" placeholder="Search here">
-            <button onclick="searchBtnClick()" id="searchBtn">Search</button>
+            <button onclick="searchBtnClick()" class="frontpageBtn" id="searchBtn">Search</button>
+            <button onclick="addMovieBtnClick()" class="frontpageBtn" id="addMovieBtn">Add Movie</button>
+        </section>
+        <section>
+            <div id="addMovieSection" class="modal">
+                <div class="modal-content">
+                    <span class="close" onclick="ShowFrontPageMovie()">&times;</span>
+                    <form action="http://localhost/movies/" method="post">
+                        Title: <input type="text" name="title"><br>
+                        Overview: <input type="text" name="overview"><br>
+                        Released: <input type="date" name="released"><br>
+                        Runtime: <input type="number" name="runtime"><br>
+                        <input type="submit" value="Add">
+                    </form>
+                </div>
+            </div>
         </section>
         <section id="resultMovieSection">
             <table id="movieTable">
